fixed z-index problem

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ input[type=submit] {
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.7);
+    z-index: 100;
 }
 
 .newsletter-popup {
@@ -115,7 +116,6 @@ header {
     box-shadow: 0px 6px 7px -2px rgba(0,0,0,0.75);
     background-color: #222;
     position: sticky;
-    z-index: -1;
 }
 nav {
     float: right;
